--- a/src/components/preview/collection-preview.styles.scss
+++ b/src/components/preview/collection-preview.styles.scss
@@ -2,14 +2,15 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 30px;
-
+  align-items: space-around;
   .title {
     font-size: 28px;
     margin-bottom: 25px;
+    margin-left: 3%;
   }
 
   .preview {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
